--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,4 +1,5 @@
 .profile__image {
+  position: relative;
   width: 120px;
   height: 120px;
   -webkit-border-radius: 50%;
@@ -7,7 +8,39 @@
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
-  background-image: url("../../../images/avatar.jpg");
+  cursor: pointer;
+}
+
+.profile__image::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  z-index: 2;
+  transition: opacity 0.3s;
+}
+
+.profile__image::after {
+  content: "";
+  background-image: url("../../../images/edit.svg");
+  display: block;
+  width: 26px;
+  height: 26px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-position: center;
+  opacity: 0;
+  z-index: 2;
+  transition: opacity 0.3s;
+}
+
+.profile__image:hover::before,
+.profile__image:hover::after {
+  opacity: 1;
 }
 
 @media screen and (max-width: 740px) {
